--- a/warp/.warp/keybindings.yaml
+++ b/warp/.warp/keybindings.yaml
@@ -1,34 +1,34 @@
 ---
-"editor_view:move_to_buffer_start": none
-"editor_view:clear_and_copy_lines": cmd-d
+"ai_assistant_panel:focus_terminal_input": cmd-ö
+"ai_assistant_panel:reset_context": none
 "editor_view:add_next_occurrence": ctrl-shift-right
-"workspace:set_a11y_concise_verbosity_level": none
-"workspace:move_tab_left": none
-"ai_assistant_panel:focus_terminal_input": cmd-ö
-"workspace:create_notebook": none
-"workspace:toggle_ai_assistant": ctrl-end
+"editor_view:clear_and_copy_lines": cmd-d
+"editor_view:delete": none
+"editor_view:move_to_buffer_start": none
 "input:toggle_natural_language_command_search": ctrl-space
-"workspace:show_settings_features_page": "cmd-,"
+"input:toggle_workflows": cmd-p
+"pane_group:add_down": none
+"pane_group:add_right": none
+"pane_group:navigate_left": none
+"pane_group:navigate_next": none
+"pane_group:navigate_right": none
+"terminal:ask_ai_assistant": none
 "workspace:activate_next_tab": alt-cmd-right
+"workspace:activate_prev_tab": alt-cmd-left
+"workspace:close_active_tab": cmd-w
+"workspace:create_notebook": none
+"workspace:increase_font_size": cmd-+
+"workspace:move_tab_left": none
+"workspace:move_tab_right": none
+"workspace:rename_active_tab": alt-shift-R
+"workspace:set_a11y_concise_verbosity_level": none
+"workspace:set_a11y_verbose_verbosity_level": none
+"workspace:show_keybinding_settings": none
+"workspace:show_settings_account_page": none
+"workspace:show_settings_features_page": "cmd-,"
 "workspace:show_settings_keyboard_shortcuts_page": "shift-cmd-:"
 "workspace:show_settings_modal": none
-"workspace:move_tab_right": none
+"workspace:toggle_ai_assistant": ctrl-end
 "workspace:toggle_command_palette": shift-space
-"workspace:increase_font_size": cmd-+
-"workspace:activate_prev_tab": alt-cmd-left
-"editor_view:delete": none
-"pane_group:navigate_left": none
-"pane_group:add_down": none
 "workspace:toggle_keybindings_page": alt-cmd-.
-"workspace:show_settings_account_page": none
-"terminal:ask_ai_assistant": none
-"workspace:show_keybinding_settings": none
-"workspace:close_active_tab": cmd-w
 "workspace:toggle_navigation_palette": none
-"pane_group:add_right": none
-"pane_group:navigate_right": none
-"input:toggle_workflows": cmd-p
-"workspace:set_a11y_verbose_verbosity_level": none
-"workspace:rename_active_tab": alt-shift-R
-"pane_group:navigate_next": none
-"ai_assistant_panel:reset_context": none
