--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -1589,6 +1589,5 @@
   "workbench.list.smoothScrolling": true, // Enable smooth scrolling in lists
   "workbench.settings.openDefaultSettings": false, // Don't open default settings
   "workbench.tree.indent": 20, // Set tree item indent size
-  "workbench.tree.renderIndentGuides": "always",
-  "window.zoomLevel": 1
+  "workbench.tree.renderIndentGuides": "always"
 }
