--- a/warp/keybindings.yaml
+++ b/warp/keybindings.yaml
@@ -1,37 +1,38 @@
 ---
-"ai_assistant_panel:focus_terminal_input": cmd-ö
-"ai_assistant_panel:reset_context": none
-"editor_view:add_next_occurrence": ctrl-shift-right
-"editor_view:clear_and_copy_lines": cmd-d
-"editor_view:delete": none
-"editor_view:move_to_buffer_start": none
-"input:toggle_natural_language_command_search": none
-"input:toggle_workflows": cmd-p
-"pane_group:add_down": none
-"pane_group:add_right": none
-"pane_group:navigate_left": none
-"pane_group:navigate_next": none
-"pane_group:navigate_right": none
-"terminal:ask_ai_assistant": none
-"terminal:copy": alt-shift-cmd-C
-"terminal:copy_commands": cmd-c
-"terminal:copy_outputs": shift-cmd-C
-"workspace:activate_next_tab": alt-cmd-right
-"workspace:activate_prev_tab": alt-cmd-left
-"workspace:close_active_tab": cmd-w
-"workspace:create_notebook": none
-"workspace:increase_font_size": cmd-+
-"workspace:move_tab_left": none
-"workspace:move_tab_right": none
-"workspace:rename_active_tab": alt-shift-R
-"workspace:set_a11y_concise_verbosity_level": none
-"workspace:set_a11y_verbose_verbosity_level": none
-"workspace:show_keybinding_settings": none
-"workspace:show_settings_account_page": none
-"workspace:show_settings_features_page": "cmd-,"
-"workspace:show_settings_keyboard_shortcuts_page": "shift-cmd-:"
-"workspace:show_settings_modal": none
-"workspace:toggle_ai_assistant": ctrl-space
-"workspace:toggle_command_palette": shift-space
 "workspace:toggle_keybindings_page": alt-cmd-.
 "workspace:toggle_navigation_palette": none
+"ai_assistant_panel:reset_context": none
+"editor_view:move_to_buffer_start": none
+"workspace:set_a11y_concise_verbosity_level": none
+"editor_view:delete": none
+"workspace:show_settings_modal": none
+"workspace:show_keybinding_settings": none
+"editor_view:add_next_occurrence": ctrl-shift-right
+"pane_group:add_down": none
+"terminal:copy_commands": ctrl-c
+"pane_group:add_right": none
+"workspace:activate_next_tab": alt-cmd-right
+"terminal:copy": cmd-c
+"workspace:show_settings_keyboard_shortcuts_page": "shift-cmd-:"
+"pane_group:navigate_left": none
+"pane_group:navigate_next": none
+"editor_view:clear_and_copy_lines": cmd-d
+"terminal:ask_ai_assistant": none
+"workspace:move_tab_left": none
+"workspace:show_settings_features_page": "cmd-,"
+"input:toggle_workflows": cmd-p
+"workspace:close_active_tab": cmd-w
+"workspace:toggle_command_palette": shift-space
+"editor_view:clear_buffer": none
+"pane_group:navigate_right": none
+"workspace:set_a11y_verbose_verbosity_level": none
+"workspace:create_notebook": none
+"workspace:move_tab_right": none
+"ai_assistant_panel:focus_terminal_input": cmd-ö
+"workspace:rename_active_tab": alt-shift-R
+"workspace:increase_font_size": cmd-+
+"workspace:show_settings_account_page": none
+"workspace:activate_prev_tab": alt-cmd-left
+"input:toggle_natural_language_command_search": none
+"workspace:toggle_ai_assistant": ctrl-space
+"terminal:copy_outputs": alt-c
