--- a/warp/keybindings.yaml
+++ b/warp/keybindings.yaml
@@ -13,9 +13,9 @@
 "pane_group:navigate_next": none
 "pane_group:navigate_right": none
 "terminal:ask_ai_assistant": none
-"terminal:copy": alt-shift-cmd-C
-"terminal:copy_commands": cmd-c
-"terminal:copy_outputs": shift-cmd-C
+"terminal:copy": cmd-c
+"terminal:copy_commands": ctrl-c
+"terminal:copy_outputs": alt-c
 "workspace:activate_next_tab": alt-cmd-right
 "workspace:activate_prev_tab": alt-cmd-left
 "workspace:close_active_tab": cmd-w
