reordered obsidian folders

--- a/vscode/globalStorage/alefragnani.project-manager/projects.json
+++ b/vscode/globalStorage/alefragnani.project-manager/projects.json
@@ -127,6 +127,13 @@
   },
   {
     "enabled": true,
+    "name": "huk-challenge",
+    "paths": [],
+    "rootPath": "/Users/joel/Documents/ProjectsPublic/huk-challenge",
+    "tags": ["python", "projects-public"]
+  },
+  {
+    "enabled": true,
     "name": "pystringr",
     "paths": [],
     "rootPath": "/Users/joel/Documents/ProjectsPublic/pystringr",
