--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -838,7 +838,7 @@
     "latex": true,
     "markdown": true,
     "plaintext": true,
-    "python": true,
+    "python": false,
     "quarto": false,
     "r": false,
     "rmd": true,
@@ -1543,6 +1543,7 @@
   "warmUp.changeTypingMode": "words (fixed amount)",
   "warmUp.switchNaturalLanguage": "german",
   "warmUp.switchProgrammingLanguage": "python",
+  "window.commandCenter": false,
   "window.newWindowDimensions": "inherit",
   "window.openFoldersInNewWindow": "on",
   "window.title": "${dirty}${activeEditorMedium}${separator}${rootPath}",
