--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -437,6 +437,7 @@
   "debug.console.fontFamily": "'CaskaydiaCove NF'",
   "debug.internalConsoleOptions": "openOnSessionStart",
   "debug.terminal.clearBeforeReusing": true,
+  "diffEditor.ignoreTrimWhitespace": false,
   "docsView.documentationView.updateMode": "sticky",
   "editor.accessibilitySupport": "off",
   "editor.autoClosingQuotes": "beforeWhitespace",
@@ -838,7 +839,7 @@
     "latex": true,
     "markdown": true,
     "plaintext": true,
-    "python": false,
+    "python": true,
     "quarto": false,
     "r": false,
     "rmd": true,
