--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -811,6 +811,7 @@
   "git.useCommitInputAsStashMessage": true,
   "gitHistory.includeRemoteBranches": true,
   "github.copilot.enable": {
+    "quarto": false,
     "*": true,
     "javascript": true,
     "jsonc": true,
@@ -818,12 +819,12 @@
     "markdown": true,
     "plaintext": true,
     "python": true,
-    "quarto": false,
     "r": false,
     "rmd": true,
     "shellscript": true,
     "typescript": true,
-    "yaml": true
+    "yaml": true,
+    "go": true
   },
   "github.copilot.inlineSuggest.enable": true,
   "githubPullRequests.fileListLayout": "tree",
@@ -1587,5 +1588,7 @@
   "workbench.list.smoothScrolling": true, // Enable smooth scrolling in lists
   "workbench.settings.openDefaultSettings": false, // Don't open default settings
   "workbench.tree.indent": 20, // Set tree item indent size
-  "workbench.tree.renderIndentGuides": "always"
+  "workbench.tree.renderIndentGuides": "always",
+  "go.toolsManagement.autoUpdate": true,
+  "console-ninja.featureSet": "Community"
 }
