--- a/not-synced/pyproject.toml
+++ b/not-synced/pyproject.toml
@@ -126,8 +126,7 @@ line-length = 100
 fix = true # autofix behavior
 show-fixes = true # enumerate fixed violations
 show-source = true # show source code snippets when reporting lint violations
-# key violation in toml file since `tool.ruff.format` header already exists
-# format = "grouped" # Group violations by containing file
+output-format = "grouped" # Group violations by containing file
 ignore-init-module-imports = true # Avoid automatically removing unused imports in __init__.py files
 # see explanation of letter codes at https://beta.ruff.rs/docs/rules/
 select = [
